--- a/packages/neurocar/package.json
+++ b/packages/neurocar/package.json
@@ -28,6 +28,7 @@
     "pinata": "^2.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "thirdweb": "^5.93.6",
     "viem": "^2.24.1",
     "wagmi": "^2.14.15",
