feat: Enhance CarNFT contract with logical deletion and registration checks
- Added `isDeleted` flag to CarDetails struct for logical deletion of car NFTs.
- Implemented `deleteCar` function to allow owners to delete their car NFTs.
- Updated minting process to check for duplicate registration numbers.
- Added mappings for registration numbers to facilitate easy lookup.
- Modified token URI retrieval to return image URI and check for deletion status.
- Introduced search functions by VIN and registration number with deletion checks.
- Updated events to include car deletion notifications.

chore: Update Hardhat configuration for Avalanche Fuji Testnet

- Changed network configuration from Avalanche to Avalanche Fuji Testnet.
- Updated deploy scripts to reflect the new network settings.

chore: Update package.json dependencies in neurocar

- Added `jspdf` and `jspdf-autotable` for PDF generation capabilities.
- Updated ABI addresses for car NFT and car insurance contracts.

feat: Implement print functionality for issue and maintenance records

- Added print buttons in IssueReportsList and MaintenanceRecordsList components.
- Implemented PDF generation for vehicle issue reports and maintenance history using jsPDF and autoTable.

--- a/packages/hardhat/package.json
+++ b/packages/hardhat/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "compile": "npx hardhat compile",
     "test": "npx hardhat test",
-    "deploy:hedera": "npx hardhat run ./ignition/modules/deploy.js --network hederaTestnet",
-    "deploy:normal": "npx hardhat run ./ignition/modules/deploy.js --network lisk-sepolia",
-    "deploy:ignition": "npx hardhat ignition deploy ./ignition/modules/deploy.js --network lisk-sepolia",
+    "deploy:avax": "npx hardhat run ./ignition/modules/deploy.js --network avalancheFujiTestnet",
+    "deploy:normal": "npx hardhat run ./ignition/modules/deploy.js --network sepolia",
     "hardhat-verify": "npx hardhat verify"
   },
   "devDependencies": {
