--- a/packages/neurocar/package.json
+++ b/packages/neurocar/package.json
@@ -21,6 +21,8 @@
     "@web3-storage/w3up-client": "^17.2.0",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "langchain": "^0.3.19",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
