feat: Add mechanics map and repair knowledge population scripts
- Implemented MechanicsMap component for displaying nearby mechanics on a map using Leaflet.
- Created page for mechanics that fetches user location and mechanics data from Supabase.
- Added populate-repair-knowledge script to read repair knowledge from JSON and insert into Supabase.
- Created SQL script to set up the car repair knowledge table with vector support.
- Added Supabase utility for client initialization.
- Included user and mechanic markers for the map with custom icons.

--- a/packages/neurocar/data/repair-knowledge.json
+++ b/packages/neurocar/data/repair-knowledge.json
@@ -1,67 +1,223 @@
 [
-    {
-      "id": "1",
-      "make": "Toyota",
-      "model": "Camry",
-      "year_range": "2018-2023",
-      "system": "Braking",
-      "symptom": "grinding noise when braking",
-      "diagnosis": "Worn brake pads or rotors",
-      "solution": "Replace brake pads and inspect rotors for damage. Replace rotors if necessary.",
-      "severity": "medium",
-      "requires_immediate_attention": true,
-      "cost_range": "$200-$500 depending on whether rotors need replacement"
-    },
-    {
-      "id": "2",
-      "make": "Honda",
-      "model": "Civic",
-      "year_range": "2016-2022",
-      "system": "Engine",
-      "symptom": "check engine light",
-      "diagnosis": "Possible oxygen sensor failure",
-      "solution": "Scan for error codes. Replace oxygen sensor if indicated.",
-      "severity": "medium",
-      "requires_immediate_attention": false,
-      "cost_range": "$150-$300 including diagnostic fee"
-    },
-    {
-      "id": "3",
-      "make": "Ford",
-      "model": "F-150",
-      "year_range": "2015-2021",
-      "system": "Electrical",
-      "symptom": "battery drains overnight",
-      "diagnosis": "Parasitic draw or failing alternator",
-      "solution": "Test battery and charging system. Check for parasitic draw using multimeter.",
-      "severity": "medium",
-      "requires_immediate_attention": false,
-      "cost_range": "$100-$500 depending on cause"
-    },
-    {
-      "id": "4",
-      "make": "Toyota",
-      "model": "Camry",
-      "year_range": "2018-2023",
-      "system": "Engine",
-      "symptom": "rough idle",
-      "diagnosis": "Dirty fuel injectors or failing spark plugs",
-      "solution": "Clean fuel injectors and replace spark plugs if needed.",
-      "severity": "low",
-      "requires_immediate_attention": false,
-      "cost_range": "$150-$300"
-    },
-    {
-      "id": "5",
-      "make": "Toyota",
-      "model": "Camry",
-      "year_range": "2018-2023",
-      "system": "Transmission",
-      "symptom": "delayed engagement when shifting from park to drive",
-      "diagnosis": "Low transmission fluid or transmission control module issue",
-      "solution": "Check and refill transmission fluid. If problem persists, diagnostic scan needed.",
-      "severity": "medium",
-      "requires_immediate_attention": false,
-      "cost_range": "$100-$800 depending on cause"
-    }
-  ]
+  {
+    "id": "1",
+    "make": "Toyota",
+    "model": "Camry",
+    "year_range": "2018-2023",
+    "system": "Braking",
+    "symptom": "grinding noise when braking",
+    "diagnosis": "Worn brake pads or rotors",
+    "solution": "Replace brake pads and inspect rotors for damage. Replace rotors if necessary.",
+    "severity": "medium",
+    "requires_immediate_attention": true,
+    "cost_range": "$200-$500 depending on whether rotors need replacement"
+  },
+  {
+    "id": "2",
+    "make": "Honda",
+    "model": "Civic",
+    "year_range": "2016-2022",
+    "system": "Engine",
+    "symptom": "check engine light",
+    "diagnosis": "Possible oxygen sensor failure",
+    "solution": "Scan for error codes. Replace oxygen sensor if indicated.",
+    "severity": "medium",
+    "requires_immediate_attention": false,
+    "cost_range": "$150-$300 including diagnostic fee"
+  },
+  {
+    "id": "3",
+    "make": "Ford",
+    "model": "F-150",
+    "year_range": "2015-2021",
+    "system": "Electrical",
+    "symptom": "battery drains overnight",
+    "diagnosis": "Parasitic draw or failing alternator",
+    "solution": "Test battery and charging system. Check for parasitic draw using multimeter.",
+    "severity": "medium",
+    "requires_immediate_attention": false,
+    "cost_range": "$100-$500 depending on cause"
+  },
+  {
+    "id": "4",
+    "make": "Toyota",
+    "model": "Camry",
+    "year_range": "2018-2023",
+    "system": "Engine",
+    "symptom": "rough idle",
+    "diagnosis": "Dirty fuel injectors or failing spark plugs",
+    "solution": "Clean fuel injectors and replace spark plugs if needed.",
+    "severity": "low",
+    "requires_immediate_attention": false,
+    "cost_range": "$150-$300"
+  },
+  {
+    "id": "5",
+    "make": "Toyota",
+    "model": "Camry",
+    "year_range": "2018-2023",
+    "system": "Transmission",
+    "symptom": "delayed engagement when shifting from park to drive",
+    "diagnosis": "Low transmission fluid or transmission control module issue",
+    "solution": "Check and refill transmission fluid. If problem persists, diagnostic scan needed.",
+    "severity": "medium",
+    "requires_immediate_attention": false,
+    "cost_range": "$100-$800 depending on cause"
+  },
+  {
+    "id": "6",
+    "make": "BMW",
+    "model": "3 Series",
+    "year_range": "2019-2024",
+    "system": "Cooling",
+    "symptom": "overheating engine",
+    "diagnosis": "Coolant leak or faulty thermostat",
+    "solution": "Inspect cooling system for leaks. Replace thermostat if necessary.",
+    "severity": "high",
+    "requires_immediate_attention": true,
+    "cost_range": "$300-$700"
+  },
+  {
+    "id": "7",
+    "make": "Mercedes-Benz",
+    "model": "C-Class",
+    "year_range": "2017-2023",
+    "system": "Suspension",
+    "symptom": "clunking noise when going over bumps",
+    "diagnosis": "Worn control arm bushings or sway bar links",
+    "solution": "Inspect suspension components and replace worn bushings or links.",
+    "severity": "medium",
+    "requires_immediate_attention": false,
+    "cost_range": "$250-$600"
+  },
+  {
+    "id": "8",
+    "make": "Audi",
+    "model": "A4",
+    "year_range": "2016-2022",
+    "system": "Steering",
+    "symptom": "power steering fluid leak",
+    "diagnosis": "Hose leak or pump failure",
+    "solution": "Inspect hoses and connections for leaks. Replace faulty components.",
+    "severity": "medium",
+    "requires_immediate_attention": true,
+    "cost_range": "$150-$500"
+  },
+  {
+    "id": "9",
+    "make": "Nissan",
+    "model": "Altima",
+    "year_range": "2017-2022",
+    "system": "Exhaust",
+    "symptom": "loud exhaust noise",
+    "diagnosis": "Exhaust leak or muffler damage",
+    "solution": "Inspect exhaust system for leaks or damage. Repair or replace components as needed.",
+    "severity": "low",
+    "requires_immediate_attention": false,
+    "cost_range": "$100-$400"
+  },
+  {
+    "id": "10",
+    "make": "Hyundai",
+    "model": "Elantra",
+    "year_range": "2016-2021",
+    "system": "Air Conditioning",
+    "symptom": "AC blowing warm air",
+    "diagnosis": "Low refrigerant or compressor issue",
+    "solution": "Recharge AC system. If problem persists, inspect compressor and other components.",
+    "severity": "low",
+    "requires_immediate_attention": false,
+    "cost_range": "$80-$400"
+  },
+  {
+    "id": "11",
+    "make": "Chevrolet",
+    "model": "Silverado",
+    "year_range": "2014-2019",
+    "system": "Braking",
+    "symptom": "pulsating brake pedal",
+    "diagnosis": "Warped brake rotors",
+    "solution": "Resurface or replace brake rotors.",
+    "severity": "medium",
+    "requires_immediate_attention": true,
+    "cost_range": "$250-$600"
+  },
+  {
+    "id": "12",
+    "make": "Jeep",
+    "model": "Wrangler",
+    "year_range": "2018-2023",
+    "system": "Suspension",
+    "symptom": "excessive bouncing after bumps",
+    "diagnosis": "Worn shock absorbers or struts",
+    "solution": "Replace shock absorbers or struts.",
+    "severity": "medium",
+    "requires_immediate_attention": false,
+    "cost_range": "$300-$800"
+  },
+  {
+    "id": "13",
+    "make": "Subaru",
+    "model": "Outback",
+    "year_range": "2015-2020",
+    "system": "Engine",
+    "symptom": "oil leak",
+    "diagnosis": "Faulty valve cover gasket or oil pan gasket",
+    "solution": "Replace leaking gasket(s).",
+    "severity": "medium",
+    "requires_immediate_attention": false,
+    "cost_range": "$100-$300"
+  },
+  {
+    "id": "14",
+    "make": "Kia",
+    "model": "Sorento",
+    "year_range": "2016-2022",
+    "system": "Electrical",
+    "symptom": "intermittent headlight flickering",
+    "diagnosis": "Loose wiring connection or failing headlight bulb/assembly",
+    "solution": "Inspect wiring and connections. Replace faulty bulb or assembly.",
+    "severity": "low",
+    "requires_immediate_attention": false,
+    "cost_range": "$50-$250"
+  },
+  {
+    "id": "15",
+    "make": "Mazda",
+    "model": "3",
+    "year_range": "2017-2023",
+    "system": "Engine",
+    "symptom": "knocking noise from engine",
+    "diagnosis": "Possible low oil pressure or internal engine damage",
+    "solution": "Check oil level and pressure. Further diagnostic needed; may require engine repair or replacement.",
+    "severity": "high",
+    "requires_immediate_attention": true,
+    "cost_range": "$100-$3000+"
+  },
+  {
+    "id": "16",
+    "make": "Volkswagen",
+    "model": "Polo",
+    "year_range": "2018-Present",
+    "system": "Engine",
+    "symptom": "rattling noise when starting or idling",
+    "diagnosis": "Timing chain issues (especially in TSI engines)",
+    "solution": "Inspect and replace timing chain and tensioner if necessary.",
+    "severity": "medium",
+    "requires_immediate_attention": true,
+    "cost_range": "£400-£800"
+  },
+  {
+    "id": "17",
+    "make": "Volkswagen",
+    "model": "Polo",
+    "year_range": "2016-Present",
+    "system": "Transmission",
+    "symptom": "jerky or delayed gear changes (DSG)",
+    "diagnosis": "DSG transmission fault, possibly mechatronic unit failure",
+    "solution": "Diagnostic scan of the transmission. Repair or replace mechatronic unit or gearbox as needed.",
+    "severity": "medium",
+    "requires_immediate_attention": false,
+    "cost_range": "£600-£2000+"
+  }
+]
