--- a/packages/neurocar/package.json
+++ b/packages/neurocar/package.json
@@ -18,18 +18,22 @@
     "@rainbow-me/rainbowkit": "^2.0.5",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.70.0",
+    "@types/leaflet": "^1.9.17",
     "@web3-storage/w3up-client": "^17.2.0",
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "langchain": "^0.3.19",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "openai": "^4.90.0",
     "pinata": "^2.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "tailwindcss-animate": "^1.0.7",
     "thirdweb": "^5.93.6",
     "viem": "^2.24.1",
