--- a/packages/neurocar/package.json
+++ b/packages/neurocar/package.json
@@ -31,6 +31,7 @@
     "next": "15.2.4",
     "openai": "^4.90.0",
     "pinata": "^2.1.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
