feat: Implement car marketplace features including listing and purchasing cars
- Added `useCarNFTData` hook for managing car NFT operations (minting, maintenance, reporting issues).
- Enhanced `Navbar` component to include a "Marketplace" link.
- Introduced `ListCarForm` component for users to list their cars for sale.
- Created `ListingCard` component to display individual car listings with purchase and cancellation options.
- Developed `MarketplaceClient` component to manage the marketplace UI, including filtering and listing functionalities.
- Added `MarketplacePage` to serve as the main entry point for the marketplace.
- Updated `yarn.lock` to include new dependencies.

--- a/packages/neurocar/package.json
+++ b/packages/neurocar/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "react-qr-code": "^2.0.15",
+    "sonner": "^2.0.3",
     "tailwindcss-animate": "^1.0.7",
     "thirdweb": "^5.93.6",
     "viem": "^2.24.1",
